# sportscalendar

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
data/: sample_events_2025.tsv
docs/: input-format.md  mvp.md
scripts/: fetch_wikipedia_tables.py
sportkalender/: __main__.py  cli.py  core.py
tasks/: lessons.md  todo.md
web/: app.js  index.html  styles.css
